# frelay

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeUserPresets.json  README.md  version.h.in  xmake.lua
.zed/: keymap.json  settings.json  tasks.json
3rd/: common-zlib-bulid.bat  common-zstd-bulid.bat  mingw32-zlib-bulid.bat  mingw32-zstd-bulid.bat  mingw64-zlib-bulid.bat  unix-zlib-build.sh
3rd/SingleApplication-3.5.2/: CMakeLists.txt  xmake.lua
3rd/qlementine-1.4.2/: CHANGELOG.md  CMakeLists.txt
3rd/qlementine-1.4.2/docs/: theme.md
3rd/qlementine-1.4.2/lib/: CMakeLists.txt
3rd/qlementine-1.4.2/lib/src/style/eventFilters/: ComboboxItemViewFilter.hpp  LineEditButtonEventFilter.hpp
3rd/qlementine-1.4.2/showcase/: CMakeLists.txt
3rd/quazip-1.5/: CMakeLists.txt
3rd/quazip-1.5/quazip/: CMakeLists.txt  minizip_crypt.h
3rd/tinyxml2/: CMakeLists.txt
ClientCore/: CMakeLists.txt  ClientCore.cpp  ClientCore.h  FileTrans.cpp  FileTrans.h  RemoteFile.cpp  RemoteFile.h  xmake.lua
Console/: CMakeLists.txt  Console.cpp  Console.h  Helper.cpp  Helper.h  main.cpp  xmake.lua
FlowLimitTest/: CMakeLists.txt  Consumer.cpp  Consumer.h  FlowLimit.cpp  FlowLimit.h  FlowLimit.ui  Producer.cpp  Producer.h  flPub.hpp  main.cpp
Gui/: CMakeLists.txt  frelayGUI.cpp  frelayGUI.h  frelayGUI.ui  main.cpp  xmake.lua
Gui/Control/: Common.cpp  Common.h  CompareControl.cpp  CompareControl.h  CompareControl.ui  ConnectControl.cpp  ConnectControl.h  ConnectControl.ui  FileControl.cpp  FileControl.h  FileControl.ui  LogControl.cpp  LogControl.h  LogControl.ui  Transform.cpp  Transform.h  Transform.ui  cpTableWidget.cpp  cpTableWidget.h  cusTableWidget.cpp  cusTableWidget.h
Gui/Form/: FileInfoForm.cpp  FileInfoForm.h  FileInfoForm.ui  Loading.cpp  Loading.h  Notice.cpp  Notice.h  Notice.ui  Transform.cpp  Transform.h  Transform.ui  settings.cpp  settings.h  settings.ui
Gui/GuiUtil/: Config.cpp  Config.h  Public.cpp  Public.h
Gui/Theme/: CMakeLists.txt  externTheme.cpp  externTheme.h  frelayTheme.cpp
Http/: CMakeLists.txt  HttpServer.cpp  HttpServer.h  main.cpp
Note/: version.md
Protocol/: CMakeLists.txt  InfoClient.h  InfoPack.hpp  Protocol.cxx  Protocol.h  xmake.lua
Res/: frelay.qrc  server.rc
Script/: musl-pi.sh  qt5-5.14.2.sh  qt5142.sh  qt6-Console-Dev.sh  qt6-Console.sh  qt6-Default-Dev.bat  qt6-Default.bat  qt6-MinGW-Dev.bat  qt6-MinGW.bat  qt6Clang.bat  qt6build-MinGW-Official.bat  qt6build.bat  termuxBuild.sh  xp-build-dev.bat  xp-build.bat  xpPack.nsi  xpbuild.bat
Server/: CMakeLists.txt  ClientThread.cpp  ClientThread.h  ClientWorker.cpp  ClientWorker.h  Server.cpp  Server.h  main.cpp  xmake.lua
Struct/: CMakeLists.txt  InfoClient.cpp  InfoClient.h  InfoDirFile.cpp  InfoDirFile.h  InfoMsg.h  InfoPack.hpp  infoMsg.cpp  xmake.lua
Test/: BaseTest.cpp  CMakeLists.txt  infoTest.cpp  infoTest.h  msgTest.cpp  msgTest.h  protocolTest.cpp  xmake.lua
Util/: CMakeLists.txt  FlowController.cpp  FlowController.h  LocalFile.cpp  LocalFile.h  QZip.cpp  QZip.h  QZipStream.cpp  QZipStream.h  QZstd.cpp  QZstd.h  Util.cpp  Util.h  xmake.lua
crashelper/: CMakeLists.txt  xmake.lua
crashelper/include/: backward.hpp  crashelper.h
crashelper/src/: crashelper.cxx
qcustomplot/: CMakeLists.txt
